comienzo de estilamiento con css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
     </header>
     <main>
-        <img alt="meme picture">
+        <div class="memeContainer">
+            <img alt="meme picture">
+        </div>
+        <button>Download picture</button>
     </main>
     <aside class="imageOptions">
         <h3>Image</h3>
@@ -53,7 +56,7 @@
         </div>
         <button><input type="reset"></button>
     </aside>
-    <aside class="textOptions">
+    <!-- <aside class="textOptions">
         <h3>Text</h3>
         <div class="firstText">
             <p>top text</p>
@@ -104,8 +107,7 @@
         <div class="leading">
             <p>leading</p>
             <input type="number">
-        </div>
-
+        </div> -->
     </aside>
 </body>
 </html>
