cambio de medidas por medidas responsivas

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
         </div>
     </header>
     <main>
+        <h2 class="text top">top</h2>
         <div class="memeContainer">
             <img alt="meme picture">
         </div>
-        <button>Download picture</button>
+        <h2 class="text bottom">bottom</h2>
     </main>
+    <button class="downloadPictureButton">Download picture</button>
     <aside class="imageOptions">
         <h3>Image</h3>
         <div class="url">
