proceso de estilacion con css - casi terminado

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2 class="text bottom">bottom</h2>
     </main>
     <button class="downloadPictureButton">Download picture</button>
-    <aside class="imageOptions">
+    <!-- <aside class="imageOptions">
         <h3>Image</h3>
         <div class="url">
             <p>url</p>
@@ -39,37 +39,37 @@
         </div>
         <div class="effects">
             <p>filters</p>
-            <label for="brigth">Brightness</label>
-            <input type="range">
-            <label for="opacity">Opacity</label>
-            <input type="range">
-            <label for="contrast">Contrast</label>
-            <input type="range">
-            <label for="blur">Blur</label>
-            <input type="range">
-            <label for="sepia">Sepia</label>
-            <input type="range">
-            <label for="hue">Hue</label>
-            <input type="range">
-            <label for="saturation">Saturation</label>
-            <input type="range">
-            <label for="negative">Negative</label>
-            <input type="range">
+            <label for="brigth">Brightness</label><br>
+            <input type="range"><br>
+            <label for="opacity">Opacity</label><br>
+            <input type="range"><br>
+            <label for="contrast">Contrast</label><br>
+            <input type="range"><br>
+            <label for="blur">Blur</label><br>
+            <input type="range"><br>
+            <label for="sepia">Sepia</label><br>
+            <input type="range"><br>
+            <label for="hue">Hue</label><br>
+            <input type="range"><br>
+            <label for="saturation">Saturation</label><br>
+            <input type="range"><br>
+            <label for="negative">Negative</label><br>
+            <input type="range"><br>
         </div>
         <button><input type="reset"></button>
-    </aside>
-    <!-- <aside class="textOptions">
+    </aside> -->
+    <aside class="textOptions">
         <h3>Text</h3>
         <div class="firstText">
             <p>top text</p>
             <input type="text">
-            <input type="checkbox">without top text
         </div>
+        <input type="checkbox">without top text
         <div class="secondText">
             <p>bottom text</p>
-            <input type="text">
-            <input type="checkbox">Without bottom text
+            <input type="text"><br>
         </div>
+        <input type="checkbox">Without bottom text
         <div class="font">
             <p>font</p>
             <select>
@@ -92,6 +92,8 @@
                 <p>background</p>
                 <input type="color">
             </div>
+        </div>
+        <div class="clearBackgroundText">
             <input type="checkbox">clear background
         </div>
         <div class="outlineText">
@@ -109,7 +111,7 @@
         <div class="leading">
             <p>leading</p>
             <input type="number">
-        </div> -->
+        </div>
     </aside>
 </body>
 </html>
