html y css completo - falta hacerlo responsive el css

--- a/index.html
+++ b/index.html
@@ -24,54 +24,54 @@
         <h2 class="text bottom">bottom</h2>
     </main>
     <button class="downloadPictureButton">Download picture</button>
-    <!-- <aside class="imageOptions">
-        <h3>Image</h3>
+    <aside class="imageOptions">
+        <h3>IMAGE</h3>
         <div class="url">
-            <p>url</p>
+            <p>URL</p>
             <input type="url">
         </div>
         <div class="background">
-            <p>background</p>
+            <p>BACKGROUND</p>
             <input type="color"><select>
                 <option>a</option>
                 <option>b</option>
             </select>
         </div>
         <div class="effects">
-            <p>filters</p>
-            <label for="brigth">Brightness</label><br>
-            <input type="range"><br>
-            <label for="opacity">Opacity</label><br>
-            <input type="range"><br>
-            <label for="contrast">Contrast</label><br>
-            <input type="range"><br>
-            <label for="blur">Blur</label><br>
-            <input type="range"><br>
-            <label for="sepia">Sepia</label><br>
-            <input type="range"><br>
-            <label for="hue">Hue</label><br>
-            <input type="range"><br>
-            <label for="saturation">Saturation</label><br>
-            <input type="range"><br>
-            <label for="negative">Negative</label><br>
-            <input type="range"><br>
+            <p>FILTERS</p>
+            <label for="brigthFilter">BRIGHTNESS</label><br>
+            <input type="range" id="brigthFilter"><br>
+            <label for="opacityFilter">OPACITY</label><br>
+            <input type="range" id="opacityFilter"><br>
+            <label for="contrastFilter">CONTRAST</label><br>
+            <input type="range" id="contrastFilter"><br>
+            <label for="blurFilter">BLUR</label><br>
+            <input type="range" id="blurFilter"><br>
+            <label for="sepiaFilter">SEPIA</label><br>
+            <input type="range" id="sepiaFilter"><br>
+            <label for="hueFilter">HUE</label><br>
+            <input type="range" id="hueFilter"><br>
+            <label for="saturationFilter">SATURATION</label><br>
+            <input type="range" id="saturationFilter"><br>
+            <label for="negativeFilter">NEGATIVE</label><br>
+            <input type="range" id="negativeFilter"><br>
         </div>
         <button><input type="reset"></button>
-    </aside> -->
-    <aside class="textOptions">
-        <h3>Text</h3>
+    </aside>
+    <!-- <aside class="textOptions">
+        <h3>TEXT</h3>
         <div class="firstText">
-            <p>top text</p>
+            <p>TOP TEXT</p>
             <input type="text">
         </div>
-        <input type="checkbox">without top text
+        <input type="checkbox"> without top text
         <div class="secondText">
-            <p>bottom text</p>
+            <p>BOTTOM TEXT</p>
             <input type="text"><br>
         </div>
-        <input type="checkbox">Without bottom text
+        <input type="checkbox"> without bottom text
         <div class="font">
-            <p>font</p>
+            <p>FONT</p>
             <select>
                 <option>a</option>
                 <option>b</option>
@@ -85,11 +85,11 @@
         </div>
         <div class="colorsElections">
             <div class="colorText">
-                <p>color</p>
+                <p>COLOR</p>
                 <input type="color">
             </div>
             <div class="backgroundColorText">
-                <p>background</p>
+                <p>BACKGROUND</p>
                 <input type="color">
             </div>
         </div>
@@ -97,7 +97,7 @@
             <input type="checkbox">clear background
         </div>
         <div class="outlineText">
-            <p>outline</p>
+            <p>OUTLINE</p>
             <div class="outlineOptions">
                 <button>None</button>
                 <button>Ligth</button>
@@ -105,13 +105,13 @@
             </div>
         </div>
         <div class="textMargin">
-            <p>margin</p>
+            <p>MARGIN</p>
             <input type="number">
         </div>
         <div class="leading">
-            <p>leading</p>
+            <p>LEADING</p>
             <input type="number">
         </div>
-    </aside>
+    </aside> -->
 </body>
 </html>
